# Unlearn

./: .gitignore  ARCHIVE_ROUNDTRIP_EXPERIMENT_INFRASTRUCTURE.md  ARTIFACT_IDENTITY_LEDGER.md  CHECKSUM_REPAIR_EXPERIMENT_INFRASTRUCTURE.md  DEPENDENCY_DAG_EXECUTION_PLAN_EXPERIMENT_INFRASTRUCTURE.md  EXPERIMENT_COMPONENTS.md  EXPERIMENT_EVIDENCE_CHAIN.md  EXPERIMENT_INFRASTRUCTURE.md  EXPERIMENT_LOGIC.md  EXPERIMENT_SETUP_COMPONENT_MAP.md  EXPERIMENT_SETUP_IMPORTANCE.md  EXPERIMENT_SETUP_OVERVIEW.md  EXPERIMENT_SETUP_RATIONALE.md  HARDLINK_EXPERIMENT_INFRASTRUCTURE.md  HARDWARE.md  IMPLEMENTATION.md  JSONL_CSV_ENRICHMENT_EXPERIMENT_INFRASTRUCTURE.md  NESTED_JSON_SCHEMA_MIGRATION_EXPERIMENT_INFRASTRUCTURE.md  PLAN.md  PROCESS_LIFECYCLE_DELTA_EXPERIMENT_INFRASTRUCTURE.md  README.md  RESEARCH_READINESS.md  ROLLING_BRANCH_REVIEWS.md  SYMLINK_TREE_RECONCILE_DESIGN.md  campaign-policy.schema.json  campaign-registry.schema.json  evaluation-spec.schema.json  executable-method-development-coverage-v2.schema.json  executable-method-development-coverage-v3.schema.json  executable-method-development-coverage-v4.schema.json  executable-method-development-coverage-v5.schema.json  executable-method-development-coverage-v8.schema.json  experiment-manifest.schema.json  hardware-result.schema.json  pyproject.toml  run-spec.schema.json  task-result.schema.json
configs/: benchmark-plan.json  benchmark-smoke.json  campaign-policy.json  executable-method-development-coverage-v1-to-v2-migration.json  executable-method-development-coverage-v1.json  executable-method-development-coverage-v2.json  (+15 more)
(+362 files in other folders)
