[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cbds-research"
version = "0.3.0"
description = "Reproducible tooling for capability-budgeted dense specialization experiments"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Hoseung Choi"},
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
schema = ["jsonschema>=4.19"]
runtime = [
  "safetensors>=0.4",
  "torch>=2.4",
  "transformers>=4.45,<6",
]
dev = [
  "jsonschema>=4.19",
  "PyYAML>=6.0",
]

[project.scripts]
cbds = "cbds.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cbds = ["py.typed", "schemas/*.json"]
